[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backup_scripts"
version = "0.1"
description = "Набор скриптов для бэкапа в Яндекс через WebDAV"
authors = [
    { name = "Ivan Zuev" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "requests>=2.0"
]

[project.urls]
Homepage = "https://github.com/ivanzuev78/BackUpScript"
Repository = "https://github.com/ivanzuev78/BackUpScript"

[tool.setuptools.packages.find]
where = ["."]
